feat: improved core backend structure with security, mapping, and validation improvements
- finalized controller layer with consistent logging strategy
- refined request/response DTOs with validation and structure improvements
- implemented mapper layer for entity-DTO conversions
- enhanced models with indexing, Instant timestamps, and consistency fixes
- completed repository layer with pagination and query optimizations
- implemented JWT-based security (filter, util, and configuration)
- added global exception handling with consistent error responses
- introduced StringNormalizer utility for centralized input normalization
- improved logging levels and consistency across layers